--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,16 @@
-GemRB svn (7059):
+GemRB svn (7159):
   New features:
     - 
+    - initial levelup support for bg1 and iwd
+    - contingency and sequencer spells
+    - compatibility with the widescreen mod (unreleased) allows for multiple
+      custom resolutions
 
   Improved features:
     - 
+    - combat
+    - better spellcasting timing
+    - actions, effects and triggers
     - various guiscripts (bg1: ability, sound selection)
     - bugfixes
 
