--- a/AUTHORS
+++ b/AUTHORS
@@ -12,5 +12,6 @@ Jaka Kranjc <lynxlupodian@users.sourceforge.net>
 Lotana <lotana@users.sourceforge.net>
 Marshall Mattingly III <mattinm@users.sourceforge.net>
 Thuy Nguyen <ndthuy@users.sourceforge.net>
+Tom Prince <tom.prince@ualberta.net>
 Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 Zefklop <zefklop@users.sourceforge.net>
