NEWS: new cycle

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GemRB git (be15d3f):
+  New features:
+    - 
+
+  Improved features:
+    - 
+    - bugfixes
+
+  Applied patches:
+
 GemRB V0.6.1 (2010-06-16):
   New features:
     - a minimal dataset
