Escaped dash to keep Lintian happy

--- a/gemrb.6
+++ b/gemrb.6
@@ -9,7 +9,7 @@
 .\"###################################################
 .SH SYNOPSIS
 .B gemrb
-[-c config-file]
+[\-c config-file]
 .br
 .B torment
 .br
