--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,20 @@
-GemRB V0.6.2 git (6bb7668b7)
+GemRB V0.6.2 git (776dcb2)
   New features:
     -
+    - selective magic resistance (bg2-style)
+    - autodetection of secret doors, detect illusions
+    - basic bardsong support
     - IWD:HoW (worldmap) compatibility!
-    - proper store economics and dragging
+    - proper store economics, ergonomics and dragging
     - custom blood color (creature-dependant)
-    - InLine trigger, EscapeAreaNoSee action
+    - new actions, iwd effects and triggers
     - Importing a SoA game into ToB
 
   Improved features:
     -
-    - loading screens, ambushes
+    - actor selection and action bar
+    - door bashing and traps
+    - loading screens, ambushes, worldmap
     - sparkles
     - panic
     - actions, object matching
