--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-GemRB V0.6.2 git (872666ca)
+GemRB V0.6.3 (2010-11-21)
   New features:
     - IWD:HoW is now completable!
     - casting sounds and footsteps
