--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,13 @@
-GemRB git (bf8b5ac809ea):
+GemRB git (901067dbb0a06b):
   New features:
     - 
+    - full wild, dead, miscast and vocal magic support
     - subspell selection (spell immunity, nahal's reckless dweomer...)
     - compatibility with the bg2 demo
 
   Improved features:
     - 
+    - travel regions
     - bink player has less artifacts
     - combat, effects, banters
     - bugfixes
