--- a/INSTALL
+++ b/INSTALL
@@ -30,6 +30,9 @@ install path prefix. Check the toplevel CMakeLists.txt to get see all the
 individual path components you can additionally alter.
 
 Pass -DCMAKE_BUILD_TYPE=Debug to cmake if you want to create a debug build.
+Pass -DNOCOLOR=1 if you want to disable colored console output, which is a
+useful option for transparent terminal emulators or non white-on-black color
+schemes.
 
 If you're on an exotic platform and get a lot of errors trying to build,
 also pass -DDISABLE_WERROR=1, so warnings won't impede you. This option is
