INSTALL: added TOUCHSCREEN note

--- a/INSTALL
+++ b/INSTALL
@@ -38,6 +38,9 @@ If you're on an exotic platform and get a lot of errors trying to build,
 also pass -DDISABLE_WERROR=1, so warnings won't impede you. This option is
 also suggested if you're making a source package.
 
+You can also pass -DTOUCHSCREEN=1 on devices that have one. GemRB will disable
+mouse scrolling and use wider visible trigger-area scrolling on borders.
+
 Please let us know if you encounter any problems while building.
 
 Building GemRB with mingw
