NEWS: prerelease update

--- a/NEWS
+++ b/NEWS
@@ -1,16 +1,14 @@
-GemRB git (ae7e8b60536573e043):
+GemRB V0.6.4 (2011-03-27):
   New features:
-    - 
+    - PST maze and (un)hardcoded projectiles
     - full wild, dead, miscast and vocal magic support
     - subspell selection (spell immunity, nahal's reckless dweomer...)
-    - compatibility with the bg2 demo
-    - PST maze and (un)hardcoded projectiles
     - Autodetect GameType if it is set to 'auto' or commented out
+    - compatibility with the bg2 demo
     - VVC lightspot support
 
   Improved features:
-    - 
-    - travel regions, projectiles
+    - travel regions, projectiles, dialog startup
     - bink player has no/less artifacts, good sound quality
     - combat, effects, actions, triggers, banters
     - bugfixes
@@ -19,6 +17,7 @@ GemRB git (ae7e8b60536573e043):
     a set of patches for Android support from Beholder
     arm compilation fixes by ShadowJack
     patch from Thomas Klausner fixing building with libpng 1.5
+    patch by Hana Dusíková to support static linking on mac
 
 GemRB V0.6.3 git (2010-11-21)
   New features:
