--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GemRB git (b10cdc3):
+  New features:
+    - 
+
+  Improved features:
+    - 
+    - bugfixes
+
+  Applied patches:
+
 GemRB V0.6.4 (2011-03-27):
   New features:
     - PST maze and (un)hardcoded projectiles
