--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,12 @@
-GemRB git (b81de475e00):
+GemRB git (363718d77d05fc5a):
   New features:
     - 
+    - it should be possible to complete ToB too now
     - yet more unhardcoded PST projectiles
 
   Improved features:
     - 
+    - performance
     - squirrels and other small game don't die instantly
     - stores and stacking
     - effects, triggers, actions, dialogs
