restart the NEWS cycle

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GemRB git (b9a8b4e):
+  New features:
+    - 
+
+  Improved features:
+    - 
+    - bugfixes
+
+  Applied patches:
+
 GemRB V0.6.5 (2011-07-24):
   New features:
     - quickspell support
