some cleanup / news

--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,8 @@ GemRB git (b9a8b4e):
     - 
 
   Improved features:
-    - 
+    - PST inventory
+    - various PST spells
     - bugfixes
 
   Applied patches:
