--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ GemRB authors listed in Alphabetical Order
 Alyssa Milburn <fuzzie@users.sourceforge.net>
 Avenger <avenger_teambg@users.sourceforge.net>
 Balrog994 <Balrog994@yahoo.com>
+Brad Allred <brad-a@users.sourceforge.net>
 Brian Tanedo <behteh@users.sourceforge.net>
 Dark-Star <doc_wagon@users.sourceforge.net>
 Divide <divide@users.sourceforge.net>
