back to the normal stream

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GemRB git (cc50371):
+  New features:
+    - 
+
+  Improved features:
+    - 
+    - bugfixes
+
+  Applied patches:
+
 GemRB V0.6.6 (2011-10-03):
   New features:
     - aura pollution and cleansing, casting interruption
